--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@
 .col-12 {width: 100%;}
 }
 
+#mainContainer{
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+
+.mainRow{
+	width: 100%;
+}
 
 .row{
 	display: inline-block;
